# slipa

./: .gitignore  CMakeLists.txt  test.cpp
slipa/: slipa.hpp
